Bug 1325770: Change formatting to abide by code style guidelines and improve a comment. r=mstange